@@ -1208,11 +1208,11 @@ Beam::set_beaming (Grob *me, Beaming_info_list const *beaming)
 	  if (beaming_prop == SCM_EOL
 	      || index_get_cell (beaming_prop, d) == SCM_EOL)
 	    {
-	      int count = beaming->infos_.at (i).beam_count_drul_[d];
+	      int count = beaming->beamlet_count (i, d);
 	      if (i > 0
 		  && i < stems.size () -1
 		  && Stem::is_invisible (stem))
-		count = min (count, beaming->infos_.at (i).beam_count_drul_[-d]);
+		count = min (count, beaming->beamlet_count (i,-d));
 
 	      if ( ((i == 0 && d == LEFT)
 		    || (i == stems.size ()-1 && d == RIGHT))
